apps/base/servarr/jellyseerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  labels:
    app.kubernetes.io/name: jellyseerr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyseerr
    spec:
      containers:
        - image: fallenbagel/jellyseerr:2.5.0
          imagePullPolicy: Always
          name: jellyseerr
          ports:
            - containerPort: 5055
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 5055
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: http
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr
