apps/base/servarr/jellyseerr/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyseerr
  labels:
    app.kubernetes.io/name: jellyseerr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
  serviceName: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyseerr
    spec:
      containers:
        - image: ghcr.io/fallenbagel/jellyseerr:2.5.0 # {"$imagepolicy": "flux-system:jellyseerr"}
          imagePullPolicy: Always
          name: jellyseerr
          ports:
            - containerPort: 5055
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 5055
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: http
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /app/config
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
        storageClassName: rook-ceph-block
